log/build_2025-11-05_11-04-32/planning/stderr.log
  File "/home/cc/ee106a/fa25/class/ee106a-ahe/ros_workspaces/lab7/install/planning/lib/python3.10/site-packages/planning/main.py", line 156
    def _on_exec_done(self, future):= "base_link"
                                   ^^
SyntaxError: expected ':'

